--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,8 +32,11 @@
 .nav {
   display: flex;
   align-items: center;
+
   @media screen and (max-width: 767px) {
     padding: 10px 0 10px 0;
+    display: flex;
+    justify-content: space-between;
   }
 }
 .logo {
@@ -44,7 +47,7 @@
   line-height: 1.19;
   text-decoration: none;
   @media screen and (max-width: 767px) {
-    margin-right: 276px;
+    // margin-right: 276px;
     font-size: 24px;
   }
   &--header {
