--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -23,8 +23,8 @@
   &__item {
     // width: 270px;
 
-    @media screen and (min-width: 480px) {
-      width: 450px;
+    @media screen and (min-width: 320px) {
+      max-width: 450px;
     }
 
     @media screen and (min-width: 768px) {
@@ -63,8 +63,8 @@
     // width: 270px;
     height: 120px;
 
-    @media screen and (min-width: 480px) {
-      width: 450px;
+    @media screen and (min-width: 320px) {
+      max-width: 450px;
     }
 
     @media screen and (min-width: 768px) {
