--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,7 +14,7 @@
   }
 
   &__box {
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       flex-direction: column;
     }
 
@@ -33,7 +33,7 @@
     display: flex;
   }
   &__form {
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       display: block;
       align-items: center;
       text-align: center;
@@ -54,7 +54,7 @@
   }
 
   &__boxlogo {
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       display: block;
       text-align: center;
       margin: 0;
@@ -75,7 +75,7 @@
     color: #ffffff;
   }
   &__secondbox {
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       display: block;
       text-align: center;
       margin: 60px 0;
@@ -152,7 +152,7 @@
     color: #ffffff;
     display: flex;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       display: block;
       align-items: center;
       justify-content: center;
@@ -178,7 +178,7 @@
     display: flex;
     align-items: center;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -213,7 +213,7 @@
 
   &__item {
     gap: 9px;
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       display: block;
       text-align: center;
       margin: 0;
@@ -257,7 +257,7 @@
   &__logo {
     margin-top: 60px;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       display: block;
       text-align: center;
       margin: 0;
@@ -289,13 +289,13 @@
       color: rgba(255, 255, 255, 0.6);
     }
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       display: block;
       text-align: center;
       justify-content: center;
       // margin-bottom: 20px;
       margin: 0;
-      width: 450px;
+      width: 100%;
       padding: 13px 16px;
       text-align: start;
     }
