made hero images with min-resolution and different images - different media screen width

--- a/css/main.css
+++ b/css/main.css
@@ -2028,8 +2028,6 @@ textarea.labelfield {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: -webkit-gradient(linear, left top, right top, from(var(--bg-image)), to(var(--bg-image))), url("../images/herobgp/hero-bgi.jpg");
-  background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)), url("../images/herobgp/hero-bgi.jpg");
   margin-left: auto;
   margin-right: auto;
   min-height: 600px;
@@ -2038,6 +2036,43 @@ textarea.labelfield {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+}
+@media screen and (min-width: 320px) {
+  .hero {
+    min-height: 400px;
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--bg-image)), to(var(--bg-image))), url("../images/hero/hero-mobile.jpg");
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)), url("../images/hero/hero-mobile.jpg");
+  }
+}
+@media screen and (min-width: 320px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 320px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--bg-image)), to(var(--bg-image))), url("../images/hero/hero-mobile-x2.jpg");
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)), url("../images/hero/hero-mobile-x2.jpg");
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--bg-image)), to(var(--bg-image))), url("../images/hero/hero-tab.jpg");
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)), url("../images/hero/hero-tab.jpg");
+  }
+}
+@media screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--bg-image)), to(var(--bg-image))), url("../images/hero/hero-tab-x2.jpg");
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)), url("../images/hero/hero-tab-x2.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--bg-image)), to(var(--bg-image))), url("../images/hero/hero-desk.jpg");
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)), url("../images/hero/hero-desk.jpg");
+  }
+}
+@media screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--bg-image)), to(var(--bg-image))), url("../images/hero/hero-desk-x2.jpg");
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)), url("../images/hero/hero-desk-x2.jpg");
+  }
 }
 .hero__title {
   color: var(--hero-text-color);
