--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,8 +5,8 @@
   background-size: cover;
   background-position: center;
 
-  background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
-    url('../images/herobgp/hero-bgi.jpg');
+  // background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
+  //   url('../images/herobgp/hero-bgi.jpg');
 
   margin-left: auto;
   margin-right: auto;
@@ -18,6 +18,34 @@
 
   padding-top: 200px;
   padding-bottom: 200px;
+
+  @media screen and (min-width: 320px) {
+    min-height: 400px;
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
+      url('../images/hero/hero-mobile.jpg');
+    @media (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
+        url('../images/hero/hero-mobile-x2.jpg');
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
+      url('../images/hero/hero-tab.jpg');
+    @media (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
+        url('../images/hero/hero-tab-x2.jpg');
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
+      url('../images/hero/hero-desk.jpg');
+    @media (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
+        url('../images/hero/hero-desk-x2.jpg');
+    }
+  }
 
   &__container {
     @extend %container;
