--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -63,8 +63,11 @@
   @extend %list;
   display: flex;
   margin-left: 93px;
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 320px) {
     display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
   }
   &__item:nth-child(n + 1) {
     margin-right: 50px;
@@ -114,11 +117,12 @@
   display: flex;
   margin-left: auto;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 320px) {
     display: none;
   }
 
   @media screen and (min-width: 768px) {
+    display: flex;
     flex-wrap: wrap;
     gap: 10px;
     align-items: center;
@@ -160,7 +164,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .navcontacts__icon--envelope {
     display: none;
   }
