--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,9 +5,6 @@
   background-size: cover;
   background-position: center;
 
-  // background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
-  //   url('../images/herobgp/hero-bgi.jpg');
-
   margin-left: auto;
   margin-right: auto;
 
@@ -29,7 +26,7 @@
     }
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 481px) {
     background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
       url('../images/hero/hero-tab.jpg');
     @media (min-resolution: 2dppx) {
@@ -38,7 +35,7 @@
     }
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 769px) {
     background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
       url('../images/hero/hero-desk.jpg');
     @media (min-resolution: 2dppx) {
@@ -54,20 +51,25 @@
   &__title {
     color: var(--hero-text-color);
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    // font-size: 44px;
+    // line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     margin-top: 0;
     margin-bottom: 30px;
-    width: 696px;
+    // width: 696px;
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (min-width: 320px) and (max-width: 767px) {
+    @media screen and (min-width: 320px) {
       font-size: 26px;
       line-height: 1.61;
       max-width: 320px;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 44px;
+      line-height: 1.36;
+      max-width: 696px;
     }
   }
 }
