--- a/css/main.css
+++ b/css/main.css
@@ -565,10 +565,16 @@ body {
 }
 @media screen and (min-width: 768px) {
   .navcontacts__icon--envelope {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     width: 14px;
     height: 10px;
   }
   .navcontacts__icon--smartphone {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     width: 10px;
     height: 14px;
   }
