removed outline from container

--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -37,8 +37,8 @@
   margin-right: auto;
   // padding-left: 15px;
   // padding-right: 15px;
-  outline: 2px solid red;
-  outline-offset: -2px;
+  // outline: 2px solid red;
+  // outline-offset: -2px;
 
   @media screen and (min-width: 320px) {
     max-width: 450px;
