1) прибрав outline з контейнера 2) у футер align-items: baseline 3) додав паддинг в feature при mobile та tablet 4) 5) додав паддинг до input у footer до 480px, щоб не щільно був до границь 6) пофіксив зображення команди, тепер для х2 та десктоп версії вони є

--- a/css/main.css
+++ b/css/main.css
@@ -1418,6 +1418,12 @@ textarea.labelfield {
         -ms-flex-pack: center;
             justify-content: center;
     gap: 60px 165px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1425,6 +1431,12 @@ textarea.labelfield {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
     gap: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
 }
 @media screen and (min-width: 320px) {
@@ -1769,6 +1781,7 @@ textarea.labelfield {
     width: 100%;
     padding: 13px 16px;
     text-align: start;
+    padding: 0 15px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1975,11 +1988,13 @@ textarea.labelfield {
 @media screen and (min-width: 320px) {
   .feature__item {
     max-width: 450px;
+    padding-bottom: 60px;
   }
 }
 @media screen and (min-width: 768px) {
   .feature__item {
     width: 354px;
+    padding-bottom: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
