--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -25,10 +25,12 @@
 
     @media screen and (min-width: 320px) {
       max-width: 450px;
+      padding-bottom: 60px;
     }
 
     @media screen and (min-width: 768px) {
       width: 354px;
+      padding-bottom: 60px;
     }
 
     @media screen and (min-width: 1200px) {
