--- a/css/main.css
+++ b/css/main.css
@@ -1490,6 +1490,10 @@ textarea.labelfield {
 .footer__join {
   text-transform: uppercase;
   color: #ffffff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
 }
 @media screen and (min-width: 320px) {
   .footer__secondbox {
