--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -77,6 +77,10 @@
   &__join {
     text-transform: uppercase;
     color: #ffffff;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
   }
   &__secondbox {
     @media screen and (min-width: 320px) {
