--- a/css/main.css
+++ b/css/main.css
@@ -882,7 +882,7 @@ body {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding: 40px 39px 40px 41px;
+  padding: 40px 40px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -894,16 +894,22 @@ body {
 @media screen and (min-width: 320px) {
   .modal {
     min-height: 609px;
-    min-width: 450px;
+    max-width: 450px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 320px) and (min-width: 480px) {
   .modal {
     min-height: 609px;
     min-width: 450px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 320px) and (min-width: 768px) {
+  .modal {
+    min-height: 609px;
+    min-width: 450px;
+  }
+}
+@media screen and (min-width: 320px) and (min-width: 1200px) {
   .modal {
     min-height: 581px;
     min-width: 528px;
@@ -944,21 +950,26 @@ textarea::placeholder {
 }
 
 .formbackdrop {
-  height: 342px;
+  min-height: 342px;
   margin-left: auto;
   margin-right: auto;
 }
 @media screen and (min-width: 320px) {
   .formbackdrop {
-    width: 370px;
+    max-width: 370px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 320px) and (min-width: 480px) {
   .formbackdrop {
     width: 370px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 320px) and (min-width: 768px) {
+  .formbackdrop {
+    width: 370px;
+  }
+}
+@media screen and (min-width: 320px) and (min-width: 1200px) {
   .formbackdrop {
     width: 448px;
   }
@@ -1018,21 +1029,26 @@ textarea::placeholder {
 }
 
 textarea.labelfield {
-  height: 120px;
+  max-height: 120px;
   margin-bottom: 20px;
   padding: 12px 16px;
 }
 @media screen and (min-width: 320px) {
   textarea.labelfield {
-    width: 370px;
+    max-width: 370px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 320px) and (min-width: 480px) {
   textarea.labelfield {
     width: 370px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 320px) and (min-width: 768px) {
+  textarea.labelfield {
+    width: 370px;
+  }
+}
+@media screen and (min-width: 320px) and (min-width: 1200px) {
   textarea.labelfield {
     width: 448px;
   }
