--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -109,7 +109,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  padding: 40px 39px 40px 41px;
+  padding: 40px 40px;
 
   position: absolute;
   top: 50%;
@@ -119,15 +119,19 @@
   transition: transorm 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (min-width: 320px) {
     min-height: 609px;
-    min-width: 450px;
-  }
-  @media screen and (min-width: 768px) {
-    min-height: 609px;
-    min-width: 450px;
-  }
-  @media screen and (min-width: 1200px) {
-    min-height: 581px;
-    min-width: 528px;
+    max-width: 450px;
+    @media screen and (min-width: 480px) {
+      min-height: 609px;
+      min-width: 450px;
+    }
+    @media screen and (min-width: 768px) {
+      min-height: 609px;
+      min-width: 450px;
+    }
+    @media screen and (min-width: 1200px) {
+      min-height: 581px;
+      min-width: 528px;
+    }
   }
 }
 
@@ -148,17 +152,20 @@ textarea::placeholder {
 }
 
 .formbackdrop {
-  height: 342px;
+  min-height: 342px;
   margin-left: auto;
   margin-right: auto;
   @media screen and (min-width: 320px) {
-    width: 370px;
-  }
-  @media screen and (min-width: 768px) {
-    width: 370px;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 448px;
+    max-width: 370px;
+    @media screen and (min-width: 480px) {
+      width: 370px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 370px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 448px;
+    }
   }
 }
 .title-form {
@@ -204,17 +211,20 @@ textarea::placeholder {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 textarea.labelfield {
-  height: 120px;
+  max-height: 120px;
   margin-bottom: 20px;
   padding: 12px 16px;
   @media screen and (min-width: 320px) {
-    width: 370px;
-  }
-  @media screen and (min-width: 768px) {
-    width: 370px;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 448px;
+    max-width: 370px;
+    @media screen and (min-width: 480px) {
+      width: 370px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 370px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 448px;
+    }
   }
 }
 
