--- a/css/main.css
+++ b/css/main.css
@@ -807,12 +807,23 @@ body {
   transition: transorm 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.mobile__menu .menu__item {
+  padding: 0;
+}
+
 .mobile__menu {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   gap: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0 0 302px 0;
 }
 
@@ -830,17 +841,22 @@ body {
 }
 .navcontacts__mobile .navcontacts__link--envelope {
   font-weight: 500;
+  font-size: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.navcontacts__mobile .navcontacts__link--smartphone {
+  font-weight: 500;
   font-size: 34px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: #2196f3;
 }
-.navcontacts__mobile .navcontacts__link--smartphone {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.166;
-  letter-spacing: 0.02em;
-  color: #757575;
+@media screen and (max-width: 400px) {
+  .navcontacts__mobile .navcontacts__link--smartphone {
+    font-size: 24px;
+  }
 }
 
 .mobile-media-list {
@@ -848,6 +864,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding: 0 0 0 40px;
   font-weight: 500;
   font-size: 18px;
@@ -1038,17 +1056,17 @@ textarea.labelfield {
     max-width: 370px;
   }
 }
-@media screen and (min-width: 320px) and (min-width: 480px) {
+@media screen and (min-width: 480px) {
   textarea.labelfield {
     width: 370px;
   }
 }
-@media screen and (min-width: 320px) and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   textarea.labelfield {
     width: 370px;
   }
 }
-@media screen and (min-width: 320px) and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   textarea.labelfield {
     width: 448px;
   }
