--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -43,12 +43,19 @@
     transition: transorm 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
+.mobile__menu .menu__item {
+  padding: 0;
+}
+
 .mobile__menu {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   gap: 32px;
+  display: flex;
+  flex-direction: column;
   margin: 0 0 302px 0;
 }
 .navcontacts__mobile {
@@ -60,17 +67,20 @@
   margin-bottom: 64px;
   .navcontacts__link--envelope {
     font-weight: 500;
-    font-size: 34px;
-    line-height: 1.17;
-    letter-spacing: 0.02em;
-    color: #2196f3;
-  }
-  .navcontacts__link--smartphone {
-    font-weight: 500;
     font-size: 24px;
     line-height: 1.166;
     letter-spacing: 0.02em;
     color: #757575;
+  }
+  .navcontacts__link--smartphone {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #2196f3;
+    @media screen and (max-width: 400px) {
+      font-size: 24px;
+    }
   }
 }
 .mobile-media-list {
@@ -78,6 +88,7 @@
   @extend %list;
   display: flex;
   gap: 20px;
+  flex-wrap: wrap;
   padding: 0 0 0 40px;
   font-weight: 500;
   font-size: 18px;
@@ -216,15 +227,15 @@ textarea.labelfield {
   padding: 12px 16px;
   @media screen and (min-width: 320px) {
     max-width: 370px;
-    @media screen and (min-width: 480px) {
-      width: 370px;
-    }
-    @media screen and (min-width: 768px) {
-      width: 370px;
-    }
-    @media screen and (min-width: 1200px) {
-      width: 448px;
-    }
+  }
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 370px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 448px;
   }
 }
 
