--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -20,6 +20,12 @@
     gap: 30px;
     // width: 354px;
   }
+
+  &__textbox {
+    @media screen and (max-width: 480px) {
+      padding-left: 10px;
+    }
+  }
   &__item {
     // width: 270px;
 
