--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -72,7 +72,14 @@
   &__item:nth-child(n + 1) {
     margin-right: 50px;
   }
+  &__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 
+    color: #212121;
+  }
   &__item {
     display: block;
     padding-top: 32px;
