--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,11 +13,10 @@
   max-width: 1600px;
   text-align: center;
 
-  padding-top: 200px;
-  padding-bottom: 200px;
-
   @media screen and (min-width: 320px) {
     min-height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
       url('../images/hero/hero-mobile.jpg');
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -42,6 +41,10 @@
       background-image: linear-gradient(to right, var(--bg-image), var(--bg-image)),
         url('../images/hero/hero-desk-x2.jpg');
     }
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 
   &__container {
