--- a/css/main.css
+++ b/css/main.css
@@ -1822,11 +1822,17 @@ textarea.labelfield {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-bottom: 20px;
     margin: 0;
-    width: 100%;
+    min-width: 310px;
     padding: 13px 16px;
     text-align: start;
     padding: 0 15px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .footer__input {
+    min-width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1837,7 +1843,6 @@ textarea.labelfield {
         -ms-flex-pack: center;
             justify-content: center;
     width: 450px;
-    padding: 13px 16px;
     text-align: start;
   }
 }
@@ -1847,7 +1852,6 @@ textarea.labelfield {
     text-align: start;
     margin-right: 12px;
     width: 358px;
-    padding: 13px 16px;
   }
 }
 
