--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -193,6 +193,7 @@
       margin: 0;
       flex-direction: column;
       gap: 20px;
+      // width: 310px;
     }
 
     @media screen and (min-width: 768px) {
@@ -200,6 +201,7 @@
       text-align: center;
       flex-direction: column;
       justify-content: center;
+      // width: 100%;
     }
 
     @media screen and (min-width: 1200px) {
@@ -301,12 +303,17 @@
       display: block;
       text-align: center;
       justify-content: center;
-      // margin-bottom: 20px;
+      margin-bottom: 20px;
       margin: 0;
-      width: 100%;
+
+      min-width: 310px;
+
       padding: 13px 16px;
       text-align: start;
       padding: 0 15px;
+    }
+    @media screen and (min-width: 480px) {
+      min-width: 100%;
     }
 
     @media screen and (min-width: 768px) {
@@ -315,7 +322,7 @@
       justify-content: center;
       // margin-bottom: 20px;
       width: 450px;
-      padding: 13px 16px;
+
       text-align: start;
     }
 
@@ -324,7 +331,6 @@
       text-align: start;
       margin-right: 12px;
       width: 358px;
-      padding: 13px 16px;
     }
   }
 }
