--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -312,9 +312,9 @@
       text-align: start;
       padding: 0 15px;
     }
-    @media screen and (min-width: 480px) {
-      min-width: 100%;
-    }
+    // @media screen and (min-width: 480px) {
+    //   min-width: 100%;
+    // }
 
     @media screen and (min-width: 768px) {
       display: block;
